# ai-indexer

./: README.md  __main__.py  pyproject.toml  redis.Dockerfile
aiindexer/: app.py
aiindexer/indexers/: newsgroups.py
aiindexer/stores/: redis.py
buddyindexer/: app.py  settings.py
buddyindexer/indexers/: __init__.py  newsgroups.py
