[project]
name = "buddyindexer"
version = "0.1.0"
description = ""
authors = [
    {name = "ywatanabe",email = "yu.w.tennis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "redis (>=6.4.0,<6.5.0)",
    "langchain-redis (>=0.2.3,<0.3.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "sentence-transformers (>=5.1.1,<5.2.0)",
    "scikit-learn (>=1.7.2,<1.8.0)",
    "pydantic-settings (>=2.10.1,<2.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
